# AutoTrader-AI

./: .editorconfig  .gitignore  .recommendations_updated  ARCHITECTURE.md  AutoTrader_AI_Metrics.pptx  CONTRIBUTING.md  DEPLOYMENT.md  GETTING_STARTED.md  GITHUB_SETUP.md  Makefile  PROJECT_SUMMARY.md  PUSH_TO_GITHUB.txt  README.md  SECURITY.md  push-to-github.sh  stock_symbols.csv
.github/: CODEOWNERS  pull_request_template.md
api-gateway/: package-lock.json  package.json
docs/: PRODUCTIONIZATION.md
ml-services/: Dockerfile.health  Dockerfile.news  connector_health_service.py  news_ingestion_service.py  pyproject.toml  requirements.txt  vault_client.py
ml-services/big_cap_losers_service/: Dockerfile  __init__.py  crawler.py  recommender.py  requirements.txt  service.py
ml-services/feature-engineering/src/: __init__.py  price_data.py  technical_indicators.py
ml-services/jim_cramer_service/: Dockerfile  __init__.py  analyzer.py  crawler.py  requirements.txt  service.py
ml-services/recommendation-engine/: Dockerfile  Dockerfile.service  README.md
ml-services/recommendation-engine/src/: main.py  news_features.py  recommendation_flow.py  regime_classifier.py  technical_features.py
ml-services/recommendation-engine/tests/: test_batch_save_to_db.py  test_json_safety.py  test_regime_classifier.py
ml-services/sentiment-analysis/: __init__.py
ml-services/sentiment-analysis/src/: __init__.py  analyzer.py
scripts/: StartUpApplication.py  clean-local.sh  manage_vault_secrets.py  start-local.sh  start_jim_cramer_service.sh  status-local.sh  stop-local.sh
(+115 files in other folders)
